# particles

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs
src/: main.rs  particle.rs  raylib.rs
