[package]
name = "particles"
version = "1.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
